# nlp-task-translation-en-ko

./: .gitignore  README.md  helsinki-nlp-opus-mt-ko-en.ipynb  huggingface_upload.ipynb  nllb-200-distilled-600m.ipynb  nllb-200-distilled.py  pyproject.toml
